Fix edit panel files spacing issue

--- a/src/components/Edit/FileExplorer/ContentFiles/ContentFiles.css
+++ b/src/components/Edit/FileExplorer/ContentFiles/ContentFiles.css
@@ -18,3 +18,6 @@
 .content-file-list {
     padding: 0 !important;
 }
+.content-file-list {
+    padding:0;
+}
